--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,11 +1,26 @@
+# To get started with Dependabot version updates, you'll need to specify which
+# package ecosystems to update and where the package manifests are located.
+# Please see the documentation for all configuration options:
+# https://docs.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
+
 version: 2
+
 updates:
   - package-ecosystem: github-actions
-    directory: /
+    directory: "/"
+    open-pull-requests-limit: 100
     schedule:
-      interval: daily
-
+      interval: weekly
+      day: monday
+      time: "07:00"
+      timezone: "Europe/Berlin"
   - package-ecosystem: npm
-    directory: /
+    directory: "/"
+    open-pull-requests-limit: 100
     schedule:
-      interval: daily
+      interval: weekly
+      day: monday
+      time: "07:00"
+      timezone: "Europe/Berlin"
+    allow:
+      - dependency-type: direct
