--- a/package.json
+++ b/package.json
@@ -24,22 +24,23 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "1.10.0",
-    "@actions/github": "5.1.1",
-    "moment": "2.29.4"
+    "@actions/core": "1.10.1",
+    "@actions/github": "6.0.0",
+    "moment": "2.30.1"
   },
   "devDependencies": {
-    "@jest/globals": "29.6.4",
-    "@types/node": "20.6.0",
-    "@typescript-eslint/parser": "6.6.0",
-    "@vercel/ncc": "0.38.0",
-    "eslint": "8.49.0",
-    "eslint-plugin-github": "4.10.0",
-    "eslint-plugin-jest": "27.2.3",
-    "jest": "29.6.4",
+    "@jest/globals": "29.7.0",
+    "@types/node": "20.11.16",
+    "@typescript-eslint/parser": "6.20.0",
+    "@vercel/ncc": "0.38.1",
+    "eslint": "8.56.0",
+    "eslint-plugin-github": "4.10.1",
+    "eslint-plugin-jest": "27.6.3",
+    "eslint-plugin-prettier": "5.1.3",
+    "jest": "29.7.0",
     "js-yaml": "4.1.0",
-    "prettier": "3.0.3",
-    "ts-jest": "29.1.1",
-    "typescript": "5.2.2"
+    "prettier": "3.2.4",
+    "ts-jest": "29.1.2",
+    "typescript": "5.3.3"
   }
 }
